--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-type-animation": "^3.2.0",
+    "swiper": "^11.2.2",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
