--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.0.0",
     "@tailwindcss/vite": "^4.0.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-type-animation": "^3.2.0",
     "swiper": "^11.2.2",
-    "tailwindcss": "^4.0.1"
+    "tailwindcss": "^4.0.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
